Replaced calls to new Integer(..) to Integer.valueOf(..) as the Integer objects are cached.